Made a single auth page, created a membership ticket modal, added theming support. Fixed some serverside issues.
